added comments to the code

--- a/net.html
+++ b/net.html
@@ -54,7 +54,7 @@
 		</div>
 
 		<div id="args_section">
-		   Value : <input type="text" id="arg_a" class="args"  value="4" oninput="updateNode()">
+		   Value : <input type="text" id="arg_a" class="args"  value="4" oninput="updateElement()">
 		   <!--br>
 		   b : <input type="text" id="arg_b" class="args"  value="5" oninput="#"><br>
 		   c : <input type="text" id="arg_c" class="args"  value="2" oninput="#">
